Fix for the scrollbar issue.

--- a/Source/Sites/TheBlackMarket/wwwroot/TheBlackMarket.scss
+++ b/Source/Sites/TheBlackMarket/wwwroot/TheBlackMarket.scss
@@ -33,7 +33,7 @@ body {
 		position: absolute;
 		left: 3.6em;
 		top: 6em;
-		right: 0em;
+		right: 1em;
 		bottom: 0em;
 		background-color: black;
 		background: url(Background1.jpg);
@@ -293,10 +293,10 @@ body {
 		left: 0;
 		top: 0;
 		height: 6em;
-		width: 100%;
+		right: 1.2em;
 		min-width: 1200px;
 		background: linear-gradient(to bottom, rgb(2, 52, 72) 0%, rgba(0,30,42,1) 1%,rgba(2,9,13,1) 97%,rgb(2, 52, 72) 98%,rgb(2, 52, 72) 100%);
-		box-shadow: 0px 5px 25px black;
+		box-shadow: 0px 5px 15px black;
 
 		> a {
 			color: white;
@@ -393,6 +393,7 @@ body {
 	z-index: 500;
 	width: 100%;
 	padding: 1em;
+	padding-left: 3em;
 	padding-bottom: 0.5em;
 	color: black;
 	background: rgb(225, 210, 168);
